Broke out mysql support into a separate file, which is an example of a 'database provider'. Transaction system now supports using multiple databases at the same time, registering each with providers and automatically opening/comitting/rolling back connections for ALL of them for each transaction. Individual providers can be accessed via transaction.mysql etc.

--- a/sample/ejs/login.ejs
+++ b/sample/ejs/login.ejs
@@ -5,6 +5,6 @@
 		<title>Sample application</title>
 	</head>
 	<body>
-		You need to log in :(
+		You need to log in with <a href="auth/google">google</a>
 	</body>
 </html>
