--- a/documentation_theme/assets/bass.css
+++ b/documentation_theme/assets/bass.css
@@ -1,4 +1,11 @@
 /*! Basscss | http://basscss.com | MIT License */
+body {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0;
+  margin-top: 0;
+  max-width: 64rem;
+}
 
 .h1{ font-size: 2rem }
 .h2{ font-size: 1.5rem }
